public/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Bona+Nova:wght@400;700&family=Libre+Franklin:wght@400;700&family=Borel&family=Quicksand:wght@400;700&family=Urbanist&family=Figtree&family=Roboto:wght@400;700&family=Ubuntu:wght@400;700&family=Ysabeau+Infant:wght@400;700&display=swap');

:root {
    --blue: rgb(88, 166, 255);
    --blueDark: rgb(28, 134, 255);
    --blueHoverBg: rgb(88, 166, 255, 0.15);
    --blueLight: #9BD1F9;
    --yellow: #FFDE0A;
    --greyLine: #DBDCDA;
    --greyLight: #F1F0F0;
    --greyText: #82807F;
    --blackLight: #212121;
    --blackTransparent: #21212175;
    --redCarol: #F95450;
    --pink: #f953501f;
    --greenLime: #66930C;
    --greenMint: #D1ECB6;
    --greenLight: #7fa4341a;
    --spacingEdge: 1rem;
    --fontArvo: 'Arvo';
    --fontBonaNova: 'Bona Nova';
    --fontLibreFranklin: 'Libre Franklin';
    --fontUbuntu: 'Ubuntu';
    --fontQuicksand: 'Quicksand';
    --fontYsabeauInfant: 'Ysabeau Infant';
    --fontRoboto: 'Roboto';
    --fontBorel: 'Borel';
    --fontUrbanist: 'Urbanist';
    --fontFigtree: 'Figtree';
}

html,
body {
    font-weight: 300;
    background-color: white;
    height: 100%;
    min-height: 100%;
}

* {
    font-family: var(--fontRoboto), sans-serif;
    overflow: visible;
    overflow-wrap: anywhere;
}

a {
    color: inherit;
    text-decoration: none;
}

h1 {
    font-family: var(--fontArvo), serif;
    font-size: 20px;
    font-weight: 700;
    margin: 0;
}

nav {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    height: 100%;
}

nav a {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--blackLight);
    padding: 10px;
    font-size: 30px;
    width: 55px;
    height: 55px;
}

nav a.yellow {
    color: var(--yellow);
}

nav a:hover {
    background-color: var(--blueHoverBg);
    color: var(--blue);
    border-radius: 50%;
}

.wrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.wrapper > .row {
    margin: 0;
    height: 100%;
}

input,
textarea {
    outline: none;
}

button {
    background-color: transparent;
    border: none;
    color: var(--greyText);
}

button i, 
button span {
    pointer-events: none;
}

/* Main Layout, Home Page */

.mainSectionContainer {
    padding: 0;
    border-left: 1px solid var(--greyLine);
    border-right: 1px solid var(--greyLine);
}

.titleContainer {
    display: flex;
    align-items: center;
    flex-shrink: 0;
    padding: 0 var(--spacingEdge);
    height: 55px;
    border-bottom: 1px solid var(--greyLine)
}

.titleContainer h1 {
    flex: 1;
}

.postFormContainer {
    display: flex;
    flex-shrink: 0;
    padding: var(--spacingEdge);
    border-bottom: 8px solid var(--blueHoverBg);
}

.modal .postFormContainer {
    padding: var(--spacingEdge) 0 0 0;
    border: none;
}

.modal .post {
    padding: 0 0 var(--spacingEdge) 0;
}

.userImageContainer {
    width: 50px;
    height: 50px;
}

.userImageContainer img {
    width: 100%;
    border-radius: 50%;
    background-color: white;
}

.textareaContainer {
    flex: 1;
    padding: 0 0 0 var(--spacingEdge);
}

.textareaContainer textarea {
    width: 100%;
    border: none;
    resize: none;
    font-size: 18px;
}

#submitPostButton {
    background-color: var(--blue);
    color: white;
    border: none;
    border-radius: 40px;
    padding: 8px 16px;
}

#submitPostButton:disabled,
#createChatButton:disabled  {
    color: var(--greyText);
    background-color: var(--greyLine);
}

.post {
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    cursor: pointer;
    padding: var(--spacingEdge);
    border-bottom: 1px solid var(--greyLine);
}

.postActionContainer {
    padding: 0 0 var(--spacingEdge) var(--spacingEdge);
    font-size: 14px; 
    color: var(--greyText);
}

.mainContentContainer {
    display: flex;
    flex: 1;
}

.postContentContainer {
    display: flex;
    flex-direction: column;
    padding: 0 0 0 var(--spacingEdge);
    flex: 1;
}

.postContentContainer .postHeader {
    display: flex;
}

.postContentContainer .postHeader .postDate {
    flex: 1;
}

.username, 
.postDate {
    color: var(--greyText);
}

.displayName {
    font-weight: bold;
}

.postHeader a:hover {
    text-decoration: underline;
}

.postHeader a, 
.postHeader span {
    padding: 0 5px 0 0;
}

.postFooter {
    display: flex;
    align-items: center;
}

.postFooter .postButtonContainer {
    display: flex;
    flex: 1;
    color: var(--greyText);
    font-size: 16px;
}

.postFooter .postButtonContainer button {
    padding: auto;
}

.postButtonContainer button:hover {
    background-color: var(--blueHoverBg);
    color: var(--blue);
    border-radius: 50%;
}

.postButtonContainer.red button:hover {
    color: var(--redCarol);
    background-color: var(--pink);
}

.postButtonContainer.red button.active {
    color: var(--redCarol);
}

.postButtonContainer.green button:hover {
    color: var(--greenLime);
    background-color: var(--greenLight);
}

.postButtonContainer.green button.active {
    color: var(--greenLime);
}

.replyFlag {
    margin: 0 0 5px 0;
}

.replyFlag a {
    color: var(--blue)
}

.postBody {
    padding: 5px 0;
}

.post.largeFont .postBody, 
.post.largeFont .postFooter {
    font-size: 19px;
    font-family: var(--fontUbuntu), monospace;
}

/* Profile Page */

.profileNotFoundErrMsg {
    padding: var(--spacingEdge);
}

.coverAndUserImagesContainer {
    height: 180px;
    background-color: var(--blueLight);
    position: relative;
}

.profileHeaderContainer .userImageContainer {
    width: 130px;
    height: 130px;
    margin: 0 0 0 var(--spacingEdge);
    position: absolute;
    bottom: -65px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profileHeaderContainer .userImageContainer img {
    border: 3px solid white;
    box-shadow: 3px 3px 2px 1px rgba(128, 128, 128, 0.15), 5px 5px 3px 2px rgba(128, 128, 128, 0.1);
}
/* ... */

